# SCalculator

./: .gitignore  CMakeLists.txt  PKGBUILD  README.md
app/: CMakeLists.txt  main.cpp
scalculator/ui/: calculator.glade
src/: CMakeLists.txt  config.cpp  config.hpp
src/frontend/: window.cpp  window.hpp
